[package]
name = "irobot_create_2_control"
version = "0.1.0"
edition = "2024"

[dependencies]
# use the 'xinput' entry (below) if running on windows
#gilrs = { version = "0.10", default-features = false, features = ["xinput"] }
gilrs = { version = "0.10", default-features = true }
serialport = "4.3"



